# Aether

./: .dockerignore  .env.example  .gitignore  2026-04-05-aether-all-in-hub-import-design.md  ACCEPTANCE-REPORT.md  AGENTS.md  DEFECTS.md  Dockerfile.app  Dockerfile.app.local  Dockerfile.base  Dockerfile.base.local  LICENSE  README.md  deploy.sh  dev.sh  docker-compose.build.yml  docker-compose.verify.yml  docker-compose.yml  entrypoint.sh  generate_keys.py  gunicorn_conf.py  migrate.sh  pyproject.toml
.github/workflows/: build-hub.yml  build-proxy.yml  deploy-pages.yml  docker-publish.yml
aether-hub/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh
aether-hub/src/: control_plane.rs  hub.rs  local_relay.rs  main.rs  protocol.rs  proxy_conn.rs  worker_conn.rs
aether-proxy/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
aether-proxy/src/: app.rs  config.rs  hardware.rs  main.rs  net.rs  runtime.rs  safe_dns.rs  setup.rs  state.rs  target_filter.rs  upstream_client.rs
aether-proxy/src/auth/: hmac.rs  mod.rs
aether-proxy/src/proxy/: connect.rs  delegate.rs  delegate_client.rs  mod.rs  plain.rs  server.rs  target_filter.rs  tls.rs
aether-proxy/src/registration/: client.rs  heartbeat.rs  mod.rs
aether-proxy/src/setup/: mod.rs  service.rs  tui.rs  upgrade.rs
aether-proxy/src/tunnel/: client.rs  dispatcher.rs  heartbeat.rs  mod.rs  protocol.rs  stream_handler.rs  writer.rs
alembic/: env.py  helpers.py
alembic/versions/: 20251210_baseline.py  20251214_1300_e9b3d63f0cbf_remove_model_mappings_add_aliases.py  20251215_0950_6d0a5273f0f1_add_indexes_for_model_alias_resolution.py  20251215_1707_180e63a9c83a_add_first_byte_time_ms_to_usage_table.py  20251216_0311_1cc6942cf06f_refactor_global_model_to_use_config_.py  20251218_0631_f30f9936f6a2_add_proxy_field_to_provider_endpoints.py  20251220_1200_add_stats_daily_model_table.py  20251220_1500_add_usage_composite_indexes.py  20260101_1400_add_ldap_authentication_support.py  20260106_1524_ad55f1d008b7_add_management_tokens_table.py  20260107_1120_02a45b66b7c4_cleanup_allowed_endpoints_fields.py  20260110_2000_consolidated_schema_updates.py  20260113_1759_e4ebe3233b40_add_auto_fetch_models_and_locked_models_.py  20260115_2300_6d579000e511_add_header_rules_and_migrate_data.py  20260116_1200_add_global_priority_by_format.py  20260118_1118_33e347f97c0c_make_users_email_password_nullable_add_.py  20260119_0519_c868729753ad_add_stats_daily_provider_table.py  20260121_1845_4b4c7b0df1a2_add_format_acceptance_config_to_provider_endpoints.py  20260127_1000_add_format_conversion_tracking_to_usage.py  20260128_1200_add_keep_priority_on_conversion.py  20260130_1000_add_auth_type_to_provider_api_keys.py  20260130_1800_add_video_tasks_table.py  20260131_1200_c8d2e4f6a1b3_add_billing_system_and_video_task_metadata.py  20260131_1530_cf40e6a5c5b1_add_api_family_endpoint_kind_and_video_formats.py  20260201_1200_a2f1b3c4d5e6_add_usage_billing_status_and_video_task_request_id.py  20260203_1500_add_video_duration_and_body_rules.py  20260203_1500_add_video_duration_seconds.py  20260204_1200_add_stats_hourly_and_daily_complete_flag.py  20260204_1500_b5c6d7e8f9a0_expand_api_key_column_to_text.py  20260206_2345_e1b2c3d4f5a6_antigravity_api_format_to_gemini_chat.py  20260207_1500_3aff3ffc4a0e_add_proxy_node_remote_config.py  20260207_1800_4b5c6d7e8f9a_add_tls_to_proxy_nodes.py  20260208_1200_5c6d7e8f9a0b_add_hardware_info_to_proxy_nodes.py  20260208_1500_6d7e8f9a0b1c_add_proxy_to_provider_api_keys.py  20260220_1800_7e8f9a0b1c2d_add_provider_request_body_and_client_response_body.py  20260221_1500_8f9a0b1c2d3e_add_api_family_endpoint_kind.py  20260224_1700_9a0b1c2d3e4f_add_tunnel_mode_fields.py  20260228_1100_b2c3d4e5f6a7_cleanup_capability_settings.py  20260228_1238_48afe197cc15_proxy_node_metrics_and_events.py  20260228_1400_b2c3d4e5f6a7_cleanup_capability_settings.py  (+28 more)
docs/: provider-quirks.md
docs/deploy/: zeabur.md
docs/guides/: body-rules-spec.md
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  shims-vue.d.ts  style.css
src/: __init__.py  _version.py  main.py
src/clients/: curl_cffi_transport.py  http_client.py  redis_client.py
src/config/: constants.py  settings.py
src/core/: access_restrictions.py  api_format_metadata.py  batch_committer.py  cache_service.py  cache_utils.py  crypto.py  enums.py  error_utils.py  exceptions.py  headers.py  http_compression.py  key_capabilities.py  logger.py  metrics.py  model_permissions.py  oauth_plan.py  optimization_utils.py  provider_auth_types.py  provider_health.py  provider_oauth_utils.py  provider_types.py  redis_utils.py  resilience.py  stream_types.py  usage_tokens.py  validators.py  vertex_auth.py  video_utils.py
src/database/: __init__.py  async_utils.py  database.py
src/middleware/: __init__.py  plugin_middleware.py  rate_limit_config.py
src/models/: _base.py  admin_async_tasks.py  admin_requests.py  api.py  api_key.py  auth.py  claude.py  database.py  database_extensions.py  endpoint_models.py  gemini.py  misc.py  model.py  openai.py  provider.py  provider_import.py  pydantic_models.py  stats.py  usage.py  user.py
src/modules/: __init__.py
src/plugins/: common.py  manager.py
src/services/: gemini_files_mapping.py
src/utils/: async_utils.py  auth_utils.py  cache_decorator.py  compression.py  database_helpers.py  perf.py  request_utils.py  sse_parser.py  ssl_utils.py  task_coordinator.py  timeout.py  transaction_manager.py  url_utils.py
tests/: e2e_hub_relay.py  test_architecture_import_rules.py  test_chat.py  test_sora.py  test_veo.py
tests/api/: test_admin_all_in_hub_import_routes.py  test_admin_api_key_scope_routes.py  test_admin_async_tasks_routes.py  test_admin_global_model_playground_routes.py  test_admin_pool_batch_action_routes.py  test_admin_provider_ops_import_prefill.py  test_admin_provider_playground_probe_routes.py  test_admin_provider_query_async_tasks.py  test_admin_provider_routes.py  test_admin_usage_routes.py  test_admin_user_routes.py  (+12 more)
(+1194 files in other folders)
