[package]
name = "aether-hub"
version = "0.1.7"
edition = "2021"
description = "Tunnel Hub for Aether - frame router between workers and proxies"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
parking_lot = "0.12"
flate2 = "1"
futures-util = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
