[package]
name = "aether-proxy"
version = "0.1.0"
edition = "2021"
description = "Forward proxy for Aether with HMAC authentication"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytes = "1"
hex = "0.4"
anyhow = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
